public/themes/0/siggy.map.css
/*****
whpopup tabs
*******/
#wormholeTabs
{
	background-color: #1f1f1f;
}

#wormholeTabs div
{
	display: inline-block;
	background-color: #0E0E0E;
	padding:5px;
	margin:0;
	font-size:1.1em;
	font-weight:bold;
}

#wormholeTabs div:hover
{
	background-color: #AB5907;
}

#wormhole-popup div.tabcontent
{
	padding:5px;
}

/* Generic context menu styles */
.contextMenu {
	position: absolute;
	width: 120px;
	z-index: 9998;
	border: solid 1px #CFCFCF;
	background: #fcfcfc;
	padding: 0px;
	margin: 0px;
	display: none;
	font-size:11px;
}

.contextMenu li {
	list-style: none;
	padding: 0px;
	margin: 0px;
}

.contextMenu a {
	color: #333;
	text-decoration: none;
	display: block;
	line-height: 15px;
	height: 15px;
	background-position: 6px center;
	background-repeat: no-repeat;
	border-bottom:1px solid #CFCFCF;
	outline: none;
	padding: 1px 5px;
	padding-left: 10px;
	font-weight: bold;
}

.contextMenu LI.hover A {
	color: #FFF;
	background-color: #3399FF;
}

.contextMenu LI.disabled A {
	color: #AAA;
	cursor: default;
}

.contextMenu LI.hover.disabled A {
	background-color: transparent;
}

.contextMenu LI.separator {
	border-top: solid 1px #CCC;
}

/*
	Adding Icons
	
	You can add icons to the context menu by adding
	classes to the respective LI element(s)
*/

.contextMenu LI.edit A { background-image: url(images/page_white_edit.png); }
.contextMenu LI.cut A { background-image: url(images/cut.png); }
.contextMenu LI.copy A { background-image: url(images/page_white_copy.png); }
.contextMenu LI.paste A { background-image: url(images/page_white_paste.png); }
.contextMenu LI.delete A { background-image: url(images/page_white_delete.png); }
.contextMenu LI.quit A { background-image: url(images/door.png); }


/*

MAP */

#chain-map-container
{
}



#chain-map-container h2
{
	text-align:center;
    position:relative;
    padding: 5px;
    font-weight: bold;
    background-color: @header-background;
}

#chain-map-container p.left
{
	display:inline-block;
	position:absolute;
	left:3px;
}

#chain-map-inner
{
	background-color: @chain-map-background;
}


#chain-map-container p.editing,
#chain-map-container p.loading,
#chain-map-container p.deleting
{
	position:absolute;
	font-size:1.4em;
	display:none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-o-user-select: none;
	user-select: none;
	cursor: default;
}


#chain-map-container p.loading
{
	font-size:3em;
}

#chain-map-container div.buttons
{
	position:relative;
	text-align:center;
}

#chain-map
{
	width: 100%;
	height: 400px;
	position:relative;
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: moz-none;
	-ms-user-select: none;
	user-select: none;
}

.map-system-blob
{
	min-width: 70px;
	max-width: 140px;
	min-height:  30px;
	background-color: #fff;
	position:absolute;
	border: 3px solid #676767;
	color: #000;
	padding:1px;
	cursor: pointer;
	z-index: 24;
	border-radius: 8px;
	-webkit-border-radius:  8px;
	overflow:hidden;
	font-size: 11px;
}

.map-eol-overlay
{
    z-index:99999999;
    background-color:#262626;
    color: #fff;
    font-size:11px;
    padding: 1px;
    display:none;
}

.map-system-blob-selected
{
	-moz-box-shadow: 0px 0px 15px rgba(240, 240, 240,1);
	-webkit-box-shadow: 0px 0px 15px rgba(240, 240, 240,1);
	box-shadow: 0px 0px 15px rgba(240, 240, 240,1);
}

/*

.map-system-blob-selected:after
{
    content:"";
    display:block;
    position:absolute;
    z-index:-1;
    top: 0px;
    left: 0;
    right: 0;
    bottom: 0px;
    border: 2px dotted #36F;
}*/

.map-system-blob-title
{
	font-weight:bold;
	overflow: hidden;
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: moz-none;
	-ms-user-select: none;
	user-select: none;
	white-space: nowrap;
	border-bottom: 1px dotted #000;
}
.map-system-blob-sysname
{
	font-size:12px;
}

.map-system-blob-class
{
	margin-right:3px;
}
.map-system-blob-actives
{
	font-size:10px;
}

.map-activity-empty
{
	border: 3px solid #03B807 !important;
}

.map-activity-active
{
	border: 3px solid #DE4444 !important;
}

.map-activity-friendly
{
	border: 3px solid #0748D6 !important;
}
.map-activity-occupied
{
	border: 3px solid #FFE205 !important;
}

.map-class-unknown
{
	color: #2783D9;
}

.map-class-dangerous
{
	color: #FF9308;
}

.map-class-deadly
{
	color: #FF0D0D;
}

.map-class-high
{
	color: #259900;
}

.map-class-low
{
	color: #FF9308;	
}

.map-class-null
{
	color: #FF0D0D;	
}

.map-class-unknown,
.map-class-dangerous,
.map-class-deadly,
.map-class-high,
.map-class-low,
.map-class-null
{
	font-style:italic;
    margin-right: 2px;
}


.map-effect
{
	border-radius: 10px;
	-webkit-border-radius:  10px;
	height:8px;
	width: 8px;
	background: white;
	display: inline-block;
	margin-right: 2px;
	border: 1px solid #000;
}

.map-effect-blackhole
{
	background: black;
}

.map-effect-pulsar
{
	background: blue;
}

.map-effect-wolf-rayet
{
	background: orange;
}

.map-effect-magnetar
{
	background: pink;
}

.map-effect-catalysmic
{
	background: yellow;
}

.map-effect-red-giant
{
	background: red;
}

.map-actives-expanded
{
}

#map-footer-bar
{
	position:relative;
	height:28px;
	background-color: @header-background;
    padding-left:10px;
    padding-top:6px;
}

#chain-map-inner div.buttons
{
	background-color: @header-background;
}

.map-tooltip
{
	color: #fff;
	background: #262626;
	padding:1px;
}

#chain-map-scrolltainer
{
	overflow-y: hidden;
	overflow-x: auto;
}

/* Let's get this party started */
#chain-map-scrolltainer::-webkit-scrollbar
{
	width: 12px;
}
 
/* Track */
#chain-map-scrolltainer::-webkit-scrollbar-track {
	
}
 
/* Handle */
#chain-map-scrolltainer::-webkit-scrollbar-thumb {
	background-color: #A46D00; 
}
#chain-map-scrolltainer::-webkit-scrollbar-thumb:window-inactive {
	background: rgba(255,0,0,0.4); 
}

#chain-map-scrolltainer::-webkit-scrollbar-track-piece {
	background-color: @header-background;
}
#chain-map-scrolltainer::-webkit-scrollbar-button {
    background-color: #664402;
}

.selection-box {
	position:    relative;
	border:     1px dotted #fff;
	background: #fff;
	opacity: 0.4;
}


#loading
{
    left: -28px;
    position: absolute;
    top: -4px;
}


/* CHAIN MAP */

#wormhole-popup,
#system-options-popup
{
	width:300px;
	display:none;
	padding:0px;
}

button.centered
{
	display:block;
	margin:0 auto;
}

input[name=from-sys],
input[name=to-sys]
{
    width:100px;
}



ul.itemList li
{
	border-bottom:1px solid #FEA800;
	padding:4px;
	font-size: 0.75em;
	background-color: #121212;
}

ul.itemList
{
	border: 1px solid #000;
}

